Fix header spacing

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header {
 
 .welcome {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: repeat(2, max-content);
     gap:5px;
 }
 
@@ -165,6 +165,7 @@ header {
     grid-template-columns: repeat(3, minmax(max-content, 100px));
     gap:20px;
     font-size: .9rem;
+    justify-content: end;
 }
 
 .buttons button {
